Fix mobile centering issues - improve responsive design alignment

--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ ul li a:hover, ul li a:focus {
     #bio, .content-wrapper {
         flex-direction: column;
         align-items: center;
+        text-align: center;
     }
 
     img {
@@ -188,26 +189,50 @@ ul li a:hover, ul li a:focus {
 
     .bio-image {
         order: -1;
-        margin-top: opx 20px;
+        margin: 20px 0;
+        width: 300px;
+        height: 300px;
+    }
+
+    .bio-content {
+        width: 100%;
+        min-width: auto;
+        text-align: center;
+        padding: 0 20px;
+        box-sizing: border-box;
     }
 
     .contact-icons, #contact > p, .bio-content, #companies, #contact {
         margin: 0;
-        padding: 0 10px;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+
+    #companies {
+        width: 100%;
+        text-align: center;
+        margin-top: 30px;
     }
 
     #companies ul {
-        margin: 0 0 0 20px;
-        text-align: left;
+        margin: 0;
+        text-align: center;
+        list-style: none;
+        padding: 0;
+    }
+
+    #companies ul li {
+        margin: 10px 0;
     }
 
     #contact {
         margin-top: 30px;
         text-align: center;
+        width: 100%;
     }
 
     #contact .contact-icons a {
-        margin-right: 10px;
+        margin: 0 5px;
     }
 
     .contact-icons {
@@ -215,14 +240,23 @@ ul li a:hover, ul li a:focus {
         justify-content: center;
         flex-wrap: wrap;
         gap: 10px;
+        margin-top: 20px;
     }
 
     header, footer {
-        padding: 10px 0;
-        align-items: center;
+        padding: 10px 20px;
+        text-align: center;
+        width: 100%;
+        box-sizing: border-box;
     }
     
     footer {
         padding-top: 60px;
+    }
+
+    nav {
+        padding: 10px 20px;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
